// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> rendering basic 1`] = `
.c0 {
  -webkit-transition: 0.3s ease border-color;
  transition: 0.3s ease border-color;
  background-color: rgba(0,0,0,0.3);
  color: white;
  border: none;
  outline: none;
  border-radius: 4px;
  padding: 0.25em;
  width: inherit;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.1);
}

.c0:focus {
  border-color: rgba(64,169,243,0.4);
}

<styled.input
  value="I am a fancy input"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  transition: 0.3s ease border-color;
  background-color: ",
            [Function],
            ";
  color: ",
            [Function],
            ";
  border: none;
  outline: none;
  border-radius: 4px;
  padding: 0.25em;
  width: ",
            [Function],
            ";
  box-sizing: border-box;

  border: 1px solid
    ",
            [Function],
            ";

  &:focus {
    border-color: ",
            [Function],
            ";
  }
",
            ";
",
          ],
        },
        "displayName": "styled.input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    value="I am a fancy input"
  >
    <input
      className="c0"
      value="I am a fancy input"
    />
  </StyledComponent>
</styled.input>
`;

exports[`<Input /> rendering error 1`] = `
.c0 {
  -webkit-transition: 0.3s ease border-color;
  transition: 0.3s ease border-color;
  background-color: rgba(0,0,0,0.3);
  color: white;
  border: none;
  outline: none;
  border-radius: 4px;
  padding: 0.25em;
  width: inherit;
  box-sizing: border-box;
  border: 1px solid rgba(242,119,119,0.5);
}

.c0:focus {
  border-color: rgba(64,169,243,0.4);
}

<styled.input
  error={true}
  value="I am a fancy input"
>
  <StyledComponent
    error={true}
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  transition: 0.3s ease border-color;
  background-color: ",
            [Function],
            ";
  color: ",
            [Function],
            ";
  border: none;
  outline: none;
  border-radius: 4px;
  padding: 0.25em;
  width: ",
            [Function],
            ";
  box-sizing: border-box;

  border: 1px solid
    ",
            [Function],
            ";

  &:focus {
    border-color: ",
            [Function],
            ";
  }
",
            ";
",
          ],
        },
        "displayName": "styled.input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    value="I am a fancy input"
  >
    <input
      className="c0"
      value="I am a fancy input"
    />
  </StyledComponent>
</styled.input>
`;

exports[`<Input /> rendering placeholder 1`] = `
.c0 {
  -webkit-transition: 0.3s ease border-color;
  transition: 0.3s ease border-color;
  background-color: rgba(0,0,0,0.3);
  color: white;
  border: none;
  outline: none;
  border-radius: 4px;
  padding: 0.25em;
  width: inherit;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.1);
}

.c0:focus {
  border-color: rgba(64,169,243,0.4);
}

<styled.input
  placeholder="Hello"
>
  <StyledComponent
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "sc-bdVaJa",
          "isStatic": false,
          "lastClassName": "c0",
          "rules": Array [
            "
  ",
            "
  transition: 0.3s ease border-color;
  background-color: ",
            [Function],
            ";
  color: ",
            [Function],
            ";
  border: none;
  outline: none;
  border-radius: 4px;
  padding: 0.25em;
  width: ",
            [Function],
            ";
  box-sizing: border-box;

  border: 1px solid
    ",
            [Function],
            ";

  &:focus {
    border-color: ",
            [Function],
            ";
  }
",
            ";
",
          ],
        },
        "displayName": "styled.input",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "sc-bdVaJa",
        "target": "input",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
    placeholder="Hello"
  >
    <input
      className="c0"
      placeholder="Hello"
    />
  </StyledComponent>
</styled.input>
`;
